k8s/peer-cluster/service-peer1.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-peer1
  labels:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/instance: peer1
spec:
  selector:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/instance: peer1
  ports:
    - name: http
      port: 8761
      targetPort: http
