k8s/peer-cluster/service-peer2.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-peer2
  labels:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/instance: peer2
spec:
  selector:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/instance: peer2
  ports:
    - name: http
      port: 8761
      targetPort: http
