k8s/peer-cluster/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-registry
  labels:
    app.kubernetes.io/name: eureka-server
spec:
  selector:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/component: registry
  ports:
    - name: http
      port: 8761
      targetPort: http
