k8s/peer-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-registry
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: eureka-cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-registry
                port:
                  number: 8761
